[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemy-Ant.gd" type="Script" id=1]
[ext_resource path="res://ant.jpg" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1438.94, 320.683 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 370.705, 371.094 )

[node name="enemy-Ant" type="KinematicBody2D"]
collision_layer = 2147483652
script = ExtResource( 1 )

[node name="Orientation" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Orientation"]
position = Vector2( -237.856, 196.326 )

[node name="Sprite" type="AnimatedSprite" parent="Orientation"]
position = Vector2( 207.652, 201.989 )
scale = Vector2( 2.15362, 2.12216 )
frames = SubResource( 1 )
animation = "walk"

[node name="PlayerDetector" type="Area2D" parent="Orientation/Sprite"]
position = Vector2( -101.262, -79.2052 )
scale = Vector2( 0.464334, 0.471218 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orientation/Sprite/PlayerDetector"]
modulate = Color( 0.027451, 0.0117647, 0.0117647, 1 )
position = Vector2( -1558.19, 137.141 )
shape = SubResource( 2 )

[node name="RayCast_Top" type="RayCast2D" parent="Orientation"]
position = Vector2( -38.1409, -95.2429 )
enabled = true
cast_to = Vector2( -3000, 0 )
collision_mask = 3

[node name="RayCast_Middle" type="RayCast2D" parent="Orientation"]
position = Vector2( -38.1406, 198.568 )
enabled = true
cast_to = Vector2( -3000, 0 )
collision_mask = 3

[node name="RayCast_Bottom" type="RayCast2D" parent="Orientation"]
position = Vector2( -67.8055, 481.189 )
enabled = true
cast_to = Vector2( -3000, 0 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 203.876, 203.877 )
shape = SubResource( 3 )

[node name="ActionDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="Orientation/Sprite/PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="ActionDelay" to="." method="_on_ActionDelay_timeout"]
